fix the whitespace on hero

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: calc(100vh - 68px);;
   .text-header {
     height: 100%;
     h1 {
